Correciones Proxy y Agregador